syntax = "proto3";

package blockjoy.blockvisor.v1;

enum NodeStatus {
    UndefinedNodeStatus = 0;
    Running = 1;
    Stopped = 2;
}

message Node {
    string id = 1;
    string name = 2;
    string chain = 3;
    string ip = 4;
    string gateway = 5;
    NodeStatus status = 6;
}

enum ServiceStatus {
    UndefinedServiceStatus = 0;
    Ok = 1;
}

message HealthRequest {}

message HealthResponse {
    ServiceStatus status = 1;
}

message CreateNodeRequest {
    string id = 1;
    string name = 2;
    string chain = 3;
    string ip = 4;
    string gateway = 5;
}

message CreateNodeResponse {}

message DeleteNodeRequest {
    string id = 1;
}

message DeleteNodeResponse {}

message StartNodeRequest {
    string id = 1;
}

message StartNodeResponse {}

message StopNodeRequest {
    string id = 1;
}

message StopNodeResponse {}

message GetNodesRequest {}

message GetNodesResponse {
    repeated Node nodes = 1;
}

message GetNodeStatusRequest {
    string id = 1;   
}

message GetNodeStatusResponse {
    NodeStatus status = 1;
}

message GetNodeIdForNameRequest {
    string name = 1;   
}

message GetNodeIdForNameResponse {
    string id = 1;
}

message ListCapabilitiesRequest {
    string node_id = 1;
}

message ListCapabilitiesResponse {
    repeated string capabilities = 1;
}

message GetHeightRequest {
    string node_id = 1;
}

message GetHeightResponse {
    uint64 height = 1;
}


message GetAgeRequest {
    string node_id = 1;
}

message GetAgeResponse {
    uint64 block_age = 1;
}
